Unify on Streams.toList()